2010-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnmail.el (nnmail-get-new-mail-1): Encode group names possibly
	containing non-ASCII characters in active file for nnml back end.

2010-07-24  David Engster  <dengste@eml.cc>

	* mml-smime.el (mml-smime-epg-verify): Also accept the older
	x-pkcs7-signature MIME type as signature (RFC 2311, C.1).

2010-07-21  Daiki Ueno  <ueno@unixuser.org>

	* mml.el (mml-parse-1): Collect "certfile" attributes in "<#secure>"
	tag (Bug#6654).

2010-07-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-bookmark-make-record): Bookmark position in
	the article buffer, not the summary buffer.

2010-07-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-bookmark-make-record): Make it work for
	Emacs 23 as well.

2010-07-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Bind bookmark-current-buffer, bookmark-yank-point for all
	Emacs versions; bind bookmark-make-record-function for Emacs >=22.

2010-07-13  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	Allow C-w when setting a bookmark in a Gnus Article buffer (Bug#5975).
	Patch applied by Karl Fogel.

	* gnus-sum.el (gnus-summary-bookmark-make-record): Set
	`bookmark-yank-point' and `bookmark-current-buffer' to allow C-w.

2010-07-13  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	Allow bookmarks to be set from Gnus Article buffers (Bug #5975).
	Patch applied (with minor tweaks) by Karl Fogel.  Note this leaves
	C-w still not working correctly from Article buffers; Thierry's
	patch to fix that will be applied after this.

	* gnus-art.el (bookmark-make-record-function): New local variable.

	* gnus-sum.el (gnus-summary-bookmark-make-record): Allow setting from
	article buffer.
	(gnus-summary-bookmark-jump): Maybe jump to article buffer.

2010-07-13  Karl Fogel  <kfogel@red-bean.com>

	* gnus-sum.el (bookmark-make-record-default): Adjust declaration, based
	on changes in bookmark.el.

2010-07-13  Katsumi Yamaoka  <yamaoka@jpl.org>
